--- a/dsc-fitting-a-logistic-regression-model-statsmodel/index.ipynb
+++ b/dsc-fitting-a-logistic-regression-model-statsmodel/index.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,13 +38,12 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import sklearn"
+    "import seaborn as sns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +184,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,6 +193,42 @@
     "# Import the data\n",
     "df = pd.read_csv(\"titanic.csv\")\n",
     "df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 891 entries, 0 to 890\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column       Non-Null Count  Dtype  \n",
+      "---  ------       --------------  -----  \n",
+      " 0   PassengerId  891 non-null    int64  \n",
+      " 1   Survived     891 non-null    int64  \n",
+      " 2   Pclass       891 non-null    int64  \n",
+      " 3   Name         891 non-null    object \n",
+      " 4   Sex          891 non-null    object \n",
+      " 5   Age          714 non-null    float64\n",
+      " 6   SibSp        891 non-null    int64  \n",
+      " 7   Parch        891 non-null    int64  \n",
+      " 8   Ticket       891 non-null    object \n",
+      " 9   Fare         891 non-null    float64\n",
+      " 10  Cabin        204 non-null    object \n",
+      " 11  Embarked     889 non-null    object \n",
+      "dtypes: float64(2), int64(5), object(5)\n",
+      "memory usage: 83.7+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Getting information about the dataframe\n",
+    "df.info()"
    ]
   },
   {
@@ -207,14 +242,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Survived: 342\n",
+      "    Dead: 549\n"
+     ]
+    }
+   ],
    "source": [
     "# Total number of people who survived/didn't survive\n",
     "survived = len(df[df[\"Survived\"] == 1])\n",
-    "dead = len(df)-survived\n",
-    "print(f'Survived:{} /n)\n"
+    "dead = len(df[df[\"Survived\"] == 0])\n",
+    "print(f'Survived: {survived}\\n    Dead: {dead}')\n"
    ]
   },
   {
@@ -226,14 +270,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_4840\\468665278.py:8: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_relevant[col] = df_relevant[col].astype('category')\n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_4840\\468665278.py:8: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_relevant[col] = df_relevant[col].astype('category')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(891, 8)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create dummy variables\n",
     "relevant_columns = ['Pclass', 'Age', 'SibSp', 'Fare', 'Sex', 'Embarked', 'Survived']\n",
-    "dummy_dataframe = None\n",
     "\n",
+    "df_relevant = df[relevant_columns]\n",
+    "\n",
+    "# Convert categorical columns to type 'category' to ensure proper encoding\n",
+    "for col in df_relevant.select_dtypes(include='object').columns:\n",
+    "    df_relevant[col] = df_relevant[col].astype('category')\n",
+    "\n",
+    "dummy_dataframe = pd.get_dummies(df_relevant, drop_first = True, dtype = float)\n",
+    "                                \n",
     "dummy_dataframe.shape"
    ]
   },
@@ -248,13 +328,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(714, 8)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Drop missing rows\n",
-    "dummy_dataframe = None\n",
+    "dummy_dataframe = dummy_dataframe.dropna(axis=0) #dropping by row\n",
     "dummy_dataframe.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Fare</th>\n",
+       "      <th>Survived</th>\n",
+       "      <th>Sex_male</th>\n",
+       "      <th>Embarked_Q</th>\n",
+       "      <th>Embarked_S</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7.2500</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>71.2833</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.9250</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>53.1000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.0500</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Pclass   Age  SibSp     Fare  Survived  Sex_male  Embarked_Q  Embarked_S\n",
+       "0       3  22.0      1   7.2500         0       1.0         0.0         1.0\n",
+       "1       1  38.0      1  71.2833         1       0.0         0.0         0.0\n",
+       "2       3  26.0      0   7.9250         1       0.0         0.0         1.0\n",
+       "3       1  35.0      1  53.1000         1       0.0         0.0         1.0\n",
+       "4       3  35.0      0   8.0500         0       1.0         0.0         1.0"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dummy_dataframe.head()"
    ]
   },
   {
@@ -266,13 +471,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Split the data into X and y\n",
-    "y = None\n",
-    "X = None"
+    "y = dummy_dataframe[\"Survived\"]\n",
+    "X = dummy_dataframe.drop(\"Survived\", axis=1)"
    ]
   },
   {
@@ -288,11 +493,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Build a logistic regression model using statsmodels\n"
+    "# Build a logistic regression model using statsmodels\n",
+    "import statsmodels.api as sm\n",
+    "\n",
+    "# Add intercept term\n",
+    "X = sm.add_constant(X)\n",
+    "\n",
+    "# Fit logistic regression model\n",
+    "logit_model = sm.Logit(y, X)"
    ]
   },
   {
@@ -306,20 +518,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimization terminated successfully.\n",
+      "         Current function value: 0.443267\n",
+      "         Iterations 6\n",
+      "                           Logit Regression Results                           \n",
+      "==============================================================================\n",
+      "Dep. Variable:               Survived   No. Observations:                  714\n",
+      "Model:                          Logit   Df Residuals:                      706\n",
+      "Method:                           MLE   Df Model:                            7\n",
+      "Date:                Mon, 29 Apr 2024   Pseudo R-squ.:                  0.3437\n",
+      "Time:                        01:28:08   Log-Likelihood:                -316.49\n",
+      "converged:                       True   LL-Null:                       -482.26\n",
+      "Covariance Type:            nonrobust   LLR p-value:                 1.103e-67\n",
+      "==============================================================================\n",
+      "                 coef    std err          z      P>|z|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "const          5.6503      0.633      8.921      0.000       4.409       6.892\n",
+      "Pclass        -1.2118      0.163     -7.433      0.000      -1.531      -0.892\n",
+      "Age           -0.0431      0.008     -5.250      0.000      -0.059      -0.027\n",
+      "SibSp         -0.3806      0.125     -3.048      0.002      -0.625      -0.136\n",
+      "Fare           0.0012      0.002      0.474      0.636      -0.004       0.006\n",
+      "Sex_male      -2.6236      0.217    -12.081      0.000      -3.049      -2.198\n",
+      "Embarked_Q    -0.8260      0.598     -1.381      0.167      -1.999       0.347\n",
+      "Embarked_S    -0.4130      0.269     -1.533      0.125      -0.941       0.115\n",
+      "==============================================================================\n"
+     ]
+    }
+   ],
    "source": [
-    "# Summary table\n"
+    "# Summary table\n",
+    "\n",
+    "# Obtain the results\n",
+    "logit_result = logit_model.fit()\n",
+    "\n",
+    "# Print summary of the model\n",
+    "print(logit_result.summary())"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Your comments here\n"
+    "##### Your comments here\n",
+    "Based on the p-values from the model:\n",
+    "The intercept term together with the variables ```Pclass```, ```Age```, ```SibSp``` and ```Sex_male``` are statistically significant in the model since their p-values are less than 0.05\n",
+    "The variables ```Fare```, ```Embarked_Q```  and ```Embarked_S``` are not statistically significant since their pvalues are greater than 0.05 which implies that they have little contribution in prediction of the survival.\n",
+    "    "
    ]
   },
   {
@@ -333,20 +584,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "# we redefine the independent variables which will only consist of the significant ones\n",
+    "significant_vars = [\"Pclass\", \"Age\", \"SibSp\",\"Sex_male\"]\n",
+    "X1 = dummy_dataframe[significant_vars]\n",
+    "\n",
+    "# Add intercept term\n",
+    "X1 = sm.add_constant(X1)\n",
+    "\n",
+    "# Fit logistic regression model again\n",
+    "logit_model_2 = sm.Logit(y, X1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimization terminated successfully.\n",
+      "         Current function value: 0.445882\n",
+      "         Iterations 6\n",
+      "                           Logit Regression Results                           \n",
+      "==============================================================================\n",
+      "Dep. Variable:               Survived   No. Observations:                  714\n",
+      "Model:                          Logit   Df Residuals:                      709\n",
+      "Method:                           MLE   Df Model:                            4\n",
+      "Date:                Mon, 29 Apr 2024   Pseudo R-squ.:                  0.3399\n",
+      "Time:                        01:52:57   Log-Likelihood:                -318.36\n",
+      "converged:                       True   LL-Null:                       -482.26\n",
+      "Covariance Type:            nonrobust   LLR p-value:                 1.089e-69\n",
+      "==============================================================================\n",
+      "                 coef    std err          z      P>|z|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "const          5.6008      0.543     10.306      0.000       4.536       6.666\n",
+      "Pclass        -1.3174      0.141     -9.350      0.000      -1.594      -1.041\n",
+      "Age           -0.0444      0.008     -5.442      0.000      -0.060      -0.028\n",
+      "SibSp         -0.3761      0.121     -3.106      0.002      -0.613      -0.139\n",
+      "Sex_male      -2.6235      0.215    -12.229      0.000      -3.044      -2.203\n",
+      "==============================================================================\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your comments here"
+    "# Get the summary of the model\n",
+    "# Obtain the results\n",
+    "logit_result_2 = logit_model_2.fit()\n",
+    "\n",
+    "# Print summary of the model\n",
+    "print(logit_result_2.summary())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Your comments here\n",
+    "The Pseudo R-squared reduced from 0.3437 in the first model to 0.3399 implying that the error in the model reduced by 0.0038 after dropping the non-significant terms. "
    ]
   },
   {
