--- a/dsc-logistic-regression-in-scikit-learn-lab-master/index.ipynb
+++ b/dsc-logistic-regression-in-scikit-learn-lab-master/index.ipynb
@@ -834,7 +834,11 @@
    "metadata": {},
    "source": [
     "##### Your analysis here\n",
-    "The model is 82.89% accurate on the test based on the simple calculations above, and 84.58% accurate on the training dataset."
+    "The model is 82.89% accurate on the test based on the simple calculations above, and 84.58% accurate on the training dataset.\n",
+    "\n",
+    "In this case I have used the confusion matrix to evaluate the performance of the model as opposed to linear regression where we used the mean squared arror and the root mean squared error ro avaluate the performance of the models.\n",
+    "\n",
+    "I have further went ahead and visualized the confusion matrix for easy interpretation."
    ]
   },
   {
