--- a/dsc-logistic-regression-model-comparisons-lab-master/index.ipynb
+++ b/dsc-logistic-regression-model-comparisons-lab-master/index.ipynb
@@ -550,7 +550,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "log_reg_1 = LogisticRegression(fit_intercept=True, C=1e5, solver = 'liblinear')\n",
+    "log_reg_1 = LogisticRegression(fit_intercept=True, C=1e+5, solver = 'liblinear')\n",
     "\n",
     "# fit the model on the training dataset\n",
     "log_reg_1.fit(X_train, y_train)\n",
@@ -634,7 +634,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "log_reg_2 = LogisticRegression(fit_intercept=True, C=1e10, solver = 'liblinear')\n",
+    "log_reg_2 = LogisticRegression(fit_intercept=True, C=1e+10, solver = 'liblinear')\n",
     "\n",
     "# fit the model on the training dataset\n",
     "log_reg_2.fit(X_train, y_train)\n",
