--- a/dsc-logistic-regression-model-comparisons-lab-master/index.ipynb
+++ b/dsc-logistic-regression-model-comparisons-lab-master/index.ipynb
@@ -642,7 +642,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Your response here"
+    "As the regularization parameter is increased from 1 to 20 in the given steps, the performance of the model on the test set reduces drastically from ```0.90174``` and remains constant at approximately ``` 0.89895```. The performance of the model on the training set also declines but is higher than its performance on the test set which indicates model overfitting."
    ]
   },
   {
