--- a/dsc-logistic-regression-model-comparisons-lab-master/index.ipynb
+++ b/dsc-logistic-regression-model-comparisons-lab-master/index.ipynb
@@ -419,6 +419,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.89      0.78      0.83        41\n",
+      "         1.0       0.78      0.89      0.83        35\n",
+      "\n",
+      "    accuracy                           0.83        76\n",
+      "   macro avg       0.83      0.83      0.83        76\n",
+      "weighted avg       0.84      0.83      0.83        76\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Generating a comprehensive report of the performance of the model\n",
+    "from sklearn.metrics import classification_report\n",
+    "print(classification_report(y_test, y_hat_test_1))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -539,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
